Update 'zi5vi0o8l-java-quarkus' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-39cef04d1b.p0a3.p3.openshiftapps.com/rhtap/rhtap-qe-java-quarkus:16de76652b5c7fa9119dbc3ca5f7a2a079af66d8@sha256:9fba9b27afb8cee86edc8296e04e1a4e345297c08c86b80029d0887c0eccd2a1

--- a/components/zi5vi0o8l-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/zi5vi0o8l-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: zi5vi0o8l-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-39cef04d1b.p0a3.p3.openshiftapps.com/rhtap/rhtap-qe-java-quarkus:16de76652b5c7fa9119dbc3ca5f7a2a079af66d8@sha256:9fba9b27afb8cee86edc8296e04e1a4e345297c08c86b80029d0887c0eccd2a1
+          name: container-image
